--- a/style.css
+++ b/style.css
@@ -123,6 +123,19 @@ h1, h3 {
 	display: block;
 }
 
+
+@media only screen and (min-width: 1400px) {
+	.project {
+		padding-left: 300px;
+		padding-right: 300px;
+	}
+
+	.para {
+		font-size: 1.3em;
+	}
+}
+
+
 @media only screen and (max-width: 960px) {
 	.words {
 		font-size: 2.2vw;
