--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 * {
-	font-family: 'Lexend Deca', sans-serif;
+	font-family: 'Lato', sans-serif;
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
 }
 
 a {
-	color: black;
+	color: white;
 	text-decoration: none;
 }
 
 .banner {
-	height: 66vh;
+	height: 100vh;
 	width: 100%;
-	background: linear-gradient( rgba(0, 20, 50, 0.6), rgba(0, 20, 50, 0.6)), url('./images/image.jpg');
+	background: linear-gradient( rgba(0, 20, 80, 0), rgba(0, 20, 80, 0.95)), url('./images/image.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: white;
@@ -21,7 +21,7 @@ a {
 }
 
 .words {
-	font-size: 1.8vw;
+	font-size: 1.6vw;
 	padding-left: 30px;
 	padding-top: 30px;
 }
@@ -34,7 +34,7 @@ h1, h3 {
 .grid-container {
 	background-color: #f5f1e4;
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 100%;
 	padding-top: 30px;
 	padding-left: 30px;
 	padding-right: 30px;
@@ -78,11 +78,6 @@ h1, h3 {
 	border-radius: 10%;
 }
 
-.logo:hover {
-	width: 50px;
-	padding: 0px;
-}
-
 .smalllogo {
 	width: 18px;
 	padding: 2px;
@@ -92,6 +87,10 @@ h1, h3 {
 	font-size: 1.1em;
 	max-width: 550px;
 	margin: auto;
+}
+
+.socials {
+	padding-top: 10px;
 }
 
 .footer {
